# sec2md

./: .gitignore  main.py  pyproject.toml  test.py
src/sec2md/: absolute_table_parser.py  cli.py  filing_types.py  get_urls.py  models.py  parser.py  table_parser.py  table_utils.py  types.py  utils.py
tests/: conftest.py  test_table_utils.py
