[project]
name = "sec2md"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "pytest>=9.1.1",
    "requests>=2.34.2",
]

[tool.setuptools]
packages = { find = { where = ["src"] } }

[project.scripts]
parse = "sec2md.cli:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    "ANN", "B", "D", "E", "F", "I", "RUF", "S", "SIM", "UP",
    "C4", "FA", "ICN", "ISC", "NPY", "PTH", "TC", "TID", "W"
]
ignore = ["ANN401", "D100", "D101", "D102", "D103", "D104", "D107", "D203", "D213", "D212", "D205", "S101"]

# --- Basedpyright configuration goes here ---
[tool.basedpyright]
typeCheckingMode = "standard"
venvPath = "."
extraPaths=["src"]
venv = ".venv"
exclude=[".venv", ".git", "__pycache__", "data", "cache", ".ruff_cache"]
useLibraryCodeForTypes = false
